# weatherclock

./: .gitignore  README.md
esp32s3-weather-clock-idf/: CMakeLists.txt  README.md  partitions_custom.csv  sdkconfig  sdkconfig.defaults
esp32s3-weather-clock-idf/components/BSP/LCD/: lcd.c
esp32s3-weather-clock-idf/components/BSPold/SPI/: spi.c
esp32s3-weather-clock-idf/components/zlib/: CMakeLists.txt
esp32s3-weather-clock-idf/main/: CMakeLists.txt  config_example.h  display_manager.c  display_manager.h  error_handler.c  error_handler.h  gzip_decompressor.c  gzip_decompressor.h  lcd_display.c  lcd_display.h  led.c  led.h  main.c  ntp_client.c  ntp_client.h  system_init.c  system_init.h  task_manager.c  task_manager.h  weather_client.c  weather_client.h  wifi_manager.c  wifi_manager.h
